Added a Dory image and few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey, I'm a big heading</h1>
-<p>Hey, I'm a paragraph elemnt</p>
-<a href="https://google.com" target="_blank" title="Hmm let's see what's new on Google">Click me!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey, I'm a big heading</h1>
+	<p>Hey, I'm a <b>paragraph</b> elemnt</p>
+	<a href="https://google.com" target="_blank" title="Hmm let's see what's new on Google">Click me!</a>
+	<p>My name is:<br>
+	Dory</p>
+	<img src="https://www.informuji.cz/data_articles/2016176134802.jpg">
+</body>
+</html>
