Wrote the CSS for our practise website and changed some HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dory</title>
 	<link rel="icon" href="img/dory.jpg">
+	<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -18,7 +20,7 @@
 		<h2>About Dory</h2>
 		<p>Dory is very optimistic and kind but a ditzy and forgetful fish. This is because she suffers from short-term memory loss. However, she has a heart of gold and was willing to go full lengths to help Marlin find his son (even though she can never remember his name).</p>
 		<img src="img/dory-big.jpg">
-		<p>Dory and her friends</p>
+		<p class="caption">Dory and her friends</p>
 
 		<!-- Characteristics -->
 		<h2>Dory's Characteristics</h2>
